UHF-96: UHF-96 Fix small logical problem in the line-height mixing, fix white space under footer in desktop sizes

--- a/src/scss/components/icons/_logo.scss
+++ b/src/scss/components/icons/_logo.scss
@@ -23,7 +23,6 @@
   margin-top: $spacing-half;
 
   @include breakpoint($breakpoint-m) {
-    margin-bottom: 0;
     margin-right: $spacing;
   }
 
